New changes made today

--- a/src/app/dashboard/breadcrumb/breadcrumb.component.html
+++ b/src/app/dashboard/breadcrumb/breadcrumb.component.html
@@ -2,7 +2,6 @@
   <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
-      <li class="breadcrumb-item active">Equipment</li>
+      <li class="breadcrumb-item active">{{breadCrumb}}</li>
   </ol>
-
 </div>
