--- a/src/app/dashboard/epp/eppstatic/eppstatic.component.html
+++ b/src/app/dashboard/epp/eppstatic/eppstatic.component.html
@@ -24,7 +24,7 @@
 
     <!--EPP  Covers List Starts-->
     <div class="row ">
-      <div class="col-6 listWrap ">
+      <div class="col-6 listWrap leftWrap">
         <ul>
           <li>
             Accidental Damage
@@ -37,7 +37,7 @@
         </ul>
 
       </div>
-      <div class=" col-6  listWrap">
+      <div class=" col-6 listWrap rightWrap">
         <ul>
           <li>
             Hail
