--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.css
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.css
@@ -1,4 +1,4 @@
-/* .roundit {
+.roundit {
 
   width: 15px;
   height: 15px;
@@ -12,28 +12,11 @@
 
 #Contract ul li {
   float: left;
-} */
+}
 /* .slick-slide{
   width: 223px;
   } */
-/* .slick-slide{
+#Equipment .cus-card{
   width: 520px;
     height: 90%;
-} */
-/* #Equipment .cus-card{
-margin: 0px 5px;
-border-radius: 5px;
-border: 1px solid rgba(0, 0, 0, 0.2);
-background-clip: padding-box;
-width: 420px;
-    height: 100%;
-    float: left;
-    
-} */
-/* .ca-box-wrap .slick-list .slick-slide > div {
-  
-  position: relative;
-  width: 520px;
-    height: 90%;
-
-} */
+}
