--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css";
+/*@import "~bootstrap/dist/css/bootstrap.css";*/
+/*@import "~bootstrap/dist/css/bootstrap.css";*/
+
+/*/assets/css/bootstrap.css*/
+
 
 
 
