new changes made today

--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -59,7 +59,7 @@
 
               </form>
               <!-- end of form -->
-
+              
             </div>
           </div>
 
@@ -67,7 +67,9 @@
         </div>
       </div>
     </div>
-
+    <div class="cookies-wrap">
+      <p> 2017-2018 First Data Corporation. All Rights Reserved.<a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy Policy.</a></p>
+       <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="blank" [routerLink]="['/cookiesdisclosure']">Cookie Policy.</a></p></div>
   </div>
 </div>
 
