--- a/src/app/thank/thank.component.html
+++ b/src/app/thank/thank.component.html
@@ -7,10 +7,10 @@
 
         <h1 class="text-center th-head ">Thank you</h1>
         <p class="text-center th-txt">Please check your email for instructions on resetting your password.</p>
-        <h6 class="text-center th-txt-sm">
-          2017-2018 First Data Corporation. All Rights Reserved. <a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy
-            Policy</a>
-        </h6>
+        <div class="cookies-wrap thanks">
+          <p> 2017-2018 First Data Corporation. All Rights Reserved.<a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy Policy.</a></p>
+           <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="blank" [routerLink]="['/cookiesdisclosure']">Cookie Policy.</a></p>
+        </div>
 
         <button type="submit" (click)="temp()"
                 class="btnSubmit btn btn-primary btn-lg btn-block thankwrap">Done
