--- a/src/app/auth/sign-up/signup-form/signup-form.component.html
+++ b/src/app/auth/sign-up/signup-form/signup-form.component.html
@@ -69,6 +69,7 @@
 
         <!-- end of sign IN form-->
       </div>
+      
 
       <!-- Start of signUP form -->
 
@@ -213,5 +214,7 @@
     </div>
 
   </div>
-
+  <div class="cookies-wrap">
+    <p> 2017-2018 First Data Corporation. All Rights Reserved.<a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy Policy.</a></p>
+     <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="blank" [routerLink]="['/cookiesdisclosure']">Cookie Policy.</a></p></div>
 </div>
