--- a/src/app/auth/new/signthank/signthank.component.html
+++ b/src/app/auth/new/signthank/signthank.component.html
@@ -6,8 +6,8 @@
         <h1 class="text-center th-head ">Thank you</h1>
         <p class="text-center th-txt">Please check your email for instructions on resetting your password.</p>
         <div class="cookies-wrap thanks">
-          <p> 2017-2018 First Data Corporation. All Rights Reserved.<a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy Policy.</a></p>
-           <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="blank" [routerLink]="['/cookiesdisclosure']">Cookie Policy.</a></p>
+          <p> 2017-2018 First Data Corporation. All Rights Reserved.&nbsp;<a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy Policy.</a></p>
+           <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="target" [routerLink]="['/cookiesdisclosure']">Cookie Policy.</a></p>
         </div>
 
         <button type="submit" (click)="temp()"
