--- a/src/app/cookies-disclosure/cookies-disclosure.component.html
+++ b/src/app/cookies-disclosure/cookies-disclosure.component.html
@@ -1,3 +1,130 @@
-<p>
-  cookies-disclosure works!
-</p>
+<div id="signWrap" class="container-fluid ">
+  <br>
+  <br>
+  <div class="row">
+    <div class="col-12">
+
+      <!--wraper for FAQ-->
+      <div class="cookies-wrap-box ">
+        <div class="c-updates">
+          <p><span>LAST UPDATED:</span> 15 May 2018 </p>
+          <p>Please contact us if you need a copy of this notice as of a particular date.</p>
+          <p><span>EFFECTIVE DATE:</span> 15 May 2018</p>
+        </div>
+
+
+        <h5>Cookies Disclosure</h5>
+        <p>This cookies disclosure will inform you about the cookies used on this website and tell you about your
+          choices
+          relating to those cookies.</p>
+        <p>We may change this disclosure at any time but will notify you of any significant changes to it before they
+          take
+          effect.</p>
+        <ol>
+
+          <li>Use of Cookies on this Website</li>
+          <li> Types of Cookies</li>
+          <li> Cookies on this Website</li>
+          <li> Adwords</li>
+        </ol>
+        <h6>1. Use of Cookies on this Website</h6>
+        <p>A cookie is a small fResetile, typically of letters and numbers, downloaded on to a device such as a computer
+          when
+          a
+          user accesses certain websites. To the extent cookies ca ngn identify an individual via their device, they are
+          considered personal data.</p>
+        <p>This web site may use cookies or local storage solely to aggregate information about the pages that users
+          visit
+          so that we can update and redesign, as necessary, our web site in order to provide you with the most useful
+          information.</p>
+        <p>Cookies or local storage can expire at the end of a browser session (from when a user opens the browser
+          window
+          to when they exit the browser) or they can be stored for longer.</p>
+
+        <h6>2. Types of Cookies </h6>
+        <p><span>Session cookies – </span>allow websites to link the actions of a user during a browser session. They
+          may be used for a variety of purposes such as remembering what a user has put in their shopping basket as they
+          browse around a site. They could also be used for security or to facilitate use of webmail. These session
+          cookies expire after a browser session so would not be stored longer term.
+        </p>
+        <p><span>Persistent cookies – </span>are stored on a users’ device in between browser sessions which allows the
+          preferences
+          or actions of the user across a site (or in some cases across different websites) to be remembered. Persistent
+          cookies may be used for a variety of purposes including remembering users’ preferences and choices when using
+          a site or to target advertising.</p>
+        <p><span>First and third party cookies –</span> Whether a cookie is ‘first’ or ‘third’ party refers to the
+          website or domain
+          placing the cookie. First party cookies in basic terms are cookies set by a website visited by the user - the
+          website displayed in the URL window. Third party cookies are cookies that are set by a domain other than the
+          one being visited by the user. If a user visits a website and a separate company sets a cookie through that
+          website this would be a third party cookie. </p>
+        <p>For more information about cookies or local storage, including how to see what cookies have been set and how
+          to manage, block and delete them, see: <a href="http://www.allaboutcookies.org/.">
+             http://www.allaboutcookies.org/.</a></p>
+        <p>This website uses the following cookies. You can delete, remove your consent and/or block cookies sent to you
+          from this website but parts of the website may not then work.</p>
+        <p>To opt out of being tracked by Google Analytics across all websites visit<a
+          href="http://tools.google.com/dlpage/gaoptout."> http://tools.google.com/dlpage/gaoptout.</a>
+        </p>
+
+        <h6>3. Cookies on this Website</h6>
+        <table class="table table-bordered">
+          <thead>
+          <tr>
+            <th>Cookies Name</th>
+            <th>Purpose</th>
+            <th>More Information</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          </tbody>
+        </table>
+        <h6>4. Adwords</h6>
+        <p>This website may also use a remarketing feature in Google AdWords to reach out to people who previously
+          visited our website. Remarketing involves classifying users according to how they use our website and creating
+          an audience segment for third-party vendors, including Google, to show our targeted ads on third party
+          websites. For example, if you access our contact form to make an enquiry about a particular product on our
+          website, you may receive information relevant to that product within a specific time of visiting our website.
+          This could be in the form of an ad on the Google search results page, or on a site in the Google Display
+          Network. You can set preferences for how Google advertises to you using the Google Ad Preferences page, and if
+          you want to, you can opt out of interest-based advertising entirely by changing your cookie settings or
+          permanently using a browser plugin.
+        </p>
+
+
+      </div>
+
+
+      <!--EPP basic Details Ends-->
+
+    </div>
+  </div>
+
+
+</div>
+
