--- a/src/app/auth/sign-up/signup-main/signup-main.component.html
+++ b/src/app/auth/sign-up/signup-main/signup-main.component.html
@@ -1,12 +1,30 @@
-<div id="signWrap" class="container-fluid">
+<div id="signWrap" class="container-fluid ">
   <div class="row ">
     <div class="col-sm-12" [ngClass]="{'col-md-6 col-lg-6': !showstat}">
       <app-signup-form (ctab)="ctab($event)" (errorToStat)="updateStatDescription($event);"></app-signup-form>
+
     </div>
     <div class="col-sm-12   col-md-6 col-lg-5" *ngIf="!showstat">
       <app-signup-stat [locked]="locked" [heading]="heading" [description]="description"></app-signup-stat>
+
+
+    </div>
+
+
+
+
+
+  </div>
+  <div class="row">
+    <div class="cookies-wrap signup-wrap" *ngIf="showstat">
+      <p> 2017-2018 First Data Corporation. All Rights Reserved.&nbsp;<a href="https://www.firstdata.com/en_us/privacy.html"
+                                                                   target="blank">Privacy Policy.</a></p>
+      <p>This site uses cookies. By continuing to browse the site you are agreeing to our <a target="target"
+                                                                                             [routerLink]="['/cookiesdisclosure']">Cookie
+        Policy.</a></p>
     </div>
   </div>
+
 </div>
 
 
