--- a/src/assets/css/urLease.css
+++ b/src/assets/css/urLease.css
@@ -1248,8 +1248,8 @@ input[type=text], input[type=password] {
       .epp .details .details-inner label {
         font-family: SimpleSans-Regular, Helvetica, sans-serif;
         font-size: 1rem;
-        width: 110px;
-        text-align: right; }
+        text-align: left;
+        padding-right: 5px; }
       .epp .details .details-inner span {
         font-family: SimpleSans-Black, Helvetica, sans-serif;
         font-size: 1rem;
@@ -1488,18 +1488,16 @@ input[type=text], input[type=password] {
   font-family: SimpleSans-Bold, Helvetica, sans-serif; }
 .epp .listWrap ul {
   margin-bottom: 10px;
-  margin-top: 10px;
-  color: #3e3e3e; }
+  margin-top: 10px; }
   .epp .listWrap ul li {
     font-family: SimpleSans-Bold, Helvetica, sans-serif;
-    color:#3e3e3e;
+    color: #3e3e3e;
     font-size: 10px;
     font-weight: bold;
     line-height: 1.6;
     font-style: normal;
     font-stretch: normal;
-    letter-spacing: normal;
-    margin-left: 30%; }
+    letter-spacing: normal; }
 .epp .ftrtxt {
   font-family: SimpleSans-Regular, Helvetica, sans-serif;
   color: #3e3e3e;
@@ -2549,14 +2547,10 @@ button:focus {
 
 .epp .listWrap.leftWrap ul li {
   margin-left: 30%;
-  text-overflow: ellipsis;
-  color: #3e3e3e;
-  font-family: SimpleSans, Helvetica, sans-serif; }
+  text-overflow: ellipsis; }
 .epp .listWrap.rightWrap ul li {
   margin-left: 30%;
-  text-overflow: ellipsis;
-  color: #616365;
- }
+  text-overflow: ellipsis; }
 
 .fd-dd-mob .dropdown {
   padding-left: 0px; }
@@ -2718,22 +2712,239 @@ button:focus {
   padding-right: 0px;
   padding-left: 0px; }
 
+.epp .rightWrap ul li {
+  font-family: SimpleSans-Bold, Helvetica, sans-serif;
+  color: #616365;
+  font-size: 10px;
+  font-weight: bold;
+  line-height: 1.6;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal; }
+
+.cookies-wrap {
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  padding: 0px 15px;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  text-align: center; }
+  .cookies-wrap p {
+    font-family: SimpleSans-Regular, Helvetica, sans-serif;
+    color: #000000;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: normal;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    margin: 0px; }
+    .cookies-wrap p:first-child {
+      margin-bottom: 5px; }
+    .cookies-wrap p a {
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #0c479d;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal; }
+
+.cookies-wrap-box {
+  border-radius: 5px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  margin: 0px 5px;
+  padding: 45px;
+  margin-bottom: 30px; }
+  .cookies-wrap-box a {
+    font-family: SimpleSans-Regular, Helvetica, sans-serif;
+    color: #000;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: normal;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal; }
+  .cookies-wrap-box table td, .cookies-wrap-box thead th {
+    border: 1px solid #979797;
+    border-bottom-color: #979797; }
+  .cookies-wrap-box tr td {
+    height: 30px; }
+  .cookies-wrap-box thead {
+    font-family: SimpleSans-Regular, Helvetica, sans-serif;
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: normal;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal; }
+  .cookies-wrap-box tbody tr:nth-child(odd) {
+    background-color: #f1f1f1; }
+  .cookies-wrap-box .c-updates {
+    color: #3e3e3e;
+    margin-bottom: 40px; }
+  .cookies-wrap-box ol {
+    padding: 0px;
+    margin: 15px; }
+    .cookies-wrap-box ol li {
+      padding-bottom: 7px; }
+  .cookies-wrap-box h5 {
+    font-family: SimpleSans-Bold, Helvetica, sans-serif;
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: normal;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    margin-bottom: 20px; }
+  .cookies-wrap-box h6 {
+    font-family: SimpleSans-Bold, Helvetica, sans-serif;
+    color: #000;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: normal;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    margin-bottom: 20px;
+    margin-top: 20px; }
+  .cookies-wrap-box p {
+    font-family: SimpleSans-Regular, Helvetica, sans-serif;
+    color: #000;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: normal;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    text-align: justify; }
+    .cookies-wrap-box p span {
+      font-family: SimpleSans-Bold, Helvetica, sans-serif;
+      color: #000;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal; }
+
+.cookies-wrap.thanks {
+  position: relative; }
+
 /*********************************** RWD  STARTS here *********************************/
 @media (min-width: 320px) and (max-width: 769px) {
-  .details .details-inner {
-    margin: 0px auto;
-    width: auto; }
-    .details .details-inner label {
+  .cookies-wrap {
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    padding: 0px 15px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    text-align: center; }
+    .cookies-wrap p {
       font-family: SimpleSans-Regular, Helvetica, sans-serif;
-      font-size: 1rem;
-      width: 110px;
-      text-align: right; }
-    .details .details-inner span {
-      font-family: SimpleSans-Black, Helvetica, sans-serif;
-      font-size: 1rem;
-      display: inline-block; }
-    .details .details-inner .activeBg {
-      color: #0072ce; }
+      color: #000000;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal;
+      margin: 0px; }
+      .cookies-wrap p:first-child {
+        margin-bottom: 5px; }
+      .cookies-wrap p a {
+        font-family: SimpleSans-Regular, Helvetica, sans-serif;
+        color: #0c479d;
+        font-size: 12px;
+        font-weight: normal;
+        line-height: normal;
+        font-style: normal;
+        font-stretch: normal;
+        letter-spacing: normal; }
+
+  .cookies-wrap-box {
+    border-radius: 5px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+    margin: 0px 5px;
+    padding: 40px 10px;
+    margin-bottom: 30px; }
+    .cookies-wrap-box a {
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #000;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal; }
+    .cookies-wrap-box thead {
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #000;
+      font-size: 14px;
+      font-weight: bold;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal; }
+    .cookies-wrap-box tbody tr:nth-child(odd) {
+      background-color: #f1f1f1; }
+    .cookies-wrap-box .c-updates {
+      color: #3e3e3e;
+      margin-bottom: 40px; }
+    .cookies-wrap-box ol {
+      padding: 0px;
+      margin: 15px; }
+      .cookies-wrap-box ol li {
+        padding-bottom: 7px; }
+    .cookies-wrap-box h5 {
+      font-family: SimpleSans-Bold, Helvetica, sans-serif;
+      color: #000;
+      font-size: 14px;
+      font-weight: bold;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal;
+      margin-bottom: 20px; }
+    .cookies-wrap-box h6 {
+      font-family: SimpleSans-Bold, Helvetica, sans-serif;
+      color: #000;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal;
+      margin-bottom: 20px;
+      margin-top: 20px; }
+    .cookies-wrap-box p {
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #000;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal;
+      text-align: justify; }
+      .cookies-wrap-box p span {
+        font-family: SimpleSans-Bold, Helvetica, sans-serif;
+        color: #000;
+        font-size: 12px;
+        font-weight: normal;
+        line-height: normal;
+        font-style: normal;
+        font-stretch: normal;
+        letter-spacing: normal; }
 
   .txtInnerWrap {
     margin-top: 0px;
@@ -3008,6 +3219,62 @@ button:focus {
     top: 120px;
     width: 35px; } }
 @media (max-width: 576px) {
+  .txtInnerWrap {
+    padding-right: 0 !important;
+    padding-left: 0 !important; }
+
+  .details {
+    padding: 0px;
+    margin: 15px 0px; }
+    .details .details-inner {
+      display: table;
+      clear: both; }
+      .details .details-inner label {
+        font-family: SimpleSans-Regular, Helvetica, sans-serif;
+        font-size: 1rem;
+        text-align: left;
+        padding-right: 5px;
+        display: block;
+        margin-bottom: 3px; }
+      .details .details-inner span {
+        font-family: SimpleSans-Black, Helvetica, sans-serif;
+        font-size: 1rem;
+        min-width: 210px;
+        display: block;
+        margin-bottom: 8px; }
+      .details .details-inner .activeBg {
+        color: #0072ce; } }
+@media (max-width: 330px) {
+  .cookies-wrap {
+    width: 100%;
+    position: relative;
+    bottom: 0px;
+    padding: 0px 15px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    text-align: center; }
+    .cookies-wrap p {
+      font-family: SimpleSans-Regular, Helvetica, sans-serif;
+      color: #000000;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: normal;
+      font-style: normal;
+      font-stretch: normal;
+      letter-spacing: normal;
+      margin: 0px; }
+      .cookies-wrap p:first-child {
+        margin-bottom: 5px; }
+      .cookies-wrap p a {
+        font-family: SimpleSans-Regular, Helvetica, sans-serif;
+        color: #0c479d;
+        font-size: 12px;
+        font-weight: normal;
+        line-height: normal;
+        font-style: normal;
+        font-stretch: normal;
+        letter-spacing: normal; }
+
   .txtInnerWrap {
     padding-right: 0 !important;
     padding-left: 0 !important; } }
