--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -1,44 +1,3 @@
-<div class="owl-carousel owl-theme">
-  <div class="item">
-    <h4>1</h4>
-  </div>
-  <div class="item">
-    <h4>2</h4>
-  </div>
-  <div class="item">
-    <h4>3</h4>
-  </div>
-  <div class="item">
-    <h4>4</h4>
-  </div>
-  <div class="item">
-    <h4>5</h4>
-  </div>
-  <div class="item">
-    <h4>6</h4>
-  </div>
-  <div class="item">
-    <h4>7</h4>
-  </div>
-  <div class="item">
-    <h4>8</h4>
-  </div>
-  <div class="item">
-    <h4>9</h4>
-  </div>
-  <div class="item">
-    <h4>10</h4>
-  </div>
-  <div class="item">
-    <h4>11</h4>
-  </div>
-  <div class="item">
-    <h4>12</h4>
-  </div>
-</div>
-
-
-
 <div *ngIf="showTabs">
   <!--Lease tabs Starts Here-->
 
@@ -108,11 +67,11 @@
 
 
                         <div class="row">
-                            <!-- <div class="pn-wrap">
+                            <div class="pn-wrap">
                                 <div class="lease-prev"><img src="/assets/img/lftarrow.svg"></div>
                                 <div class="lease-next"><img src="/assets/img/rytarrow.svg"></div>
                               </div>
-                            <div class="ca-box-wrap"> -->
+                            <div class="ca-box-wrap">
 
                           <div class=" eqptest col-12 col-md-6 "
                                *ngFor="let item of selectedLease['equipments'];"
@@ -144,7 +103,7 @@
 
                             </div>
                             </div>
-                          <!-- </div> -->
+                          </div>
                         </div>
 
                       </div>
@@ -155,14 +114,14 @@
                 </div>
 
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
-                </a>
+                </a> -->
 
 
               </div>
