eqp tab and loader fixed

--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -1,3 +1,13 @@
+<div class="loaderpop" id="" *ngIf="loaderStatus">
+    <div class="loaderpop-inner">
+      <div class="loaderpop-inner-cnt">
+        <div class="lds-dual-ring"></div>
+        <div class="lds-dual-ring-s"></div>
+      </div>
+      <p>Loading...</p>
+  
+    </div>
+  </div>
 <div *ngIf="dataReady">
   <eppstatic [hidden]="!showeppstatic"></eppstatic>
   <div [hidden]="showeppstatic">
