--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.css
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.css
@@ -17,8 +17,9 @@
   width: 223px;
   } */
 #Equipment .cus-card{
-  width: 520px;
+  min-width: 200px;
     height: 90%;
+    margin: 5px;
 }
 #Equipment .cus-card:nth-child(odd){
 
